fix z-index player audio

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -62,4 +62,5 @@ audio {
   left: 50%;
   margin-left: -150px;
   width: 300px;
+  z-index: 20;
 }
